--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 body{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+#root{
+    display: grid;
+    place-content: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
