--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -1,21 +1,87 @@
 /* This is the styling of the web application header */
 
+:root{
+    --border: 1px solid lightgrey
+}
+.AppHeader{
+    width: 100%;
+    height: 60px;
+    /* border: var(--border); */
+    padding: 0px;
+}
+.AppHeader > nav{
+    border: var(--border);
+    height: inherit;
+    width: 100%;
+    padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.AppHeader > nav > .optns{
+    /* width: 350px; */
+    /* border: var(--border); */
+    display: flex;
+    justify-content: space-between;
+    /* align-items: end; */
+    padding: 5px 0px;
+    margin: 0;
+    font-size: 18px;
+}
+.AppHeader > nav > .optns > span{
+    margin-left: 15px;
+}
+.AppHeader > nav > .optns > span:last-child{
+    margin-left: 10px;
+}
+.AppHeader > nav > .optns .user{
+    font-size: 25px;
+    padding: 2px;
+    border: 2px solid dodgerblue;
+    border-radius: 50%;
+}
+.AppHeader > nav > .optns > span:hover{
+    cursor: pointer;
+    border-bottom: 2px solid dodgerblue;
+}
+.AppHeader > nav > .optns > span:last-child:hover{
+    border-bottom: none;
+}
+
 /*
 This is the media screen for mobile devices (up to 767px)
 */
-@media screen and (max-width: 767px){}
+@media screen and (max-width: 767px){
+    .AppHeader > nav > .optns{
+        display: none;
+    }
+    .icon{
+        font-size: 20px;
+    }
+}
 
 /*
 This is the media screen for tablets (768px - 991px)
 */
-@media screen and (min-width:768px) and (max-width: 991px){}
+@media screen and (min-width:768px) and (max-width: 991px){
+    .AppHeader > nav > button{
+        display: none;
+    }
+}
 
 /*
 This is the media screen for laptops(992px - 1199px)
 */
-@media screen and (min-width:992px) and (max-width: 1199px){}
+@media screen and (min-width:992px) and (max-width: 1199px){
+    .AppHeader > nav > button{
+        display: none;
+    }
+}
 
 /*
 This is the media screen for desktops (1200px and above)
 */
-@media screen and (min-width: 1200px){}
+@media screen and (min-width: 1200px){
+    .AppHeader > nav > button{
+        display: none;
+    }
+}
