--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -31,17 +31,17 @@
     margin-left: 30px;
 }
 .AppHeader > nav > .optns > span:last-child{
-    margin-left: 10px;
+    margin-left: 15px;
 }
 .AppHeader > nav > .optns .user{
     font-size: 25px;
     padding: 2px;
-    border: 2px solid dodgerblue;
+    border: 2px solid black;
     border-radius: 50%;
 }
 .AppHeader > nav > .optns > span:hover{
     cursor: pointer;
-    border-bottom: 2px solid dodgerblue;
+    border-bottom: 2px solid black;
 }
 .AppHeader > nav > .optns > span:last-child:hover{
     border-bottom: none;
