--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -4,7 +4,7 @@
     --border: 1px solid lightgrey
 }
 .AppHeader{
-    width: 100%;
+    width: 100vw;
     height: 60px;
     /* border: var(--border); */
     padding: 0px;
