--- a/src/RewardEarn/AddUpPage/addPage.css
+++ b/src/RewardEarn/AddUpPage/addPage.css
@@ -2,12 +2,22 @@
 .addPage{
     width: 100%;
     height: 80vh;
-    background: url('../../RewardApp/Assets/city.avif');
+    background: url('../Assets/Katab\ Design.png');
     background-position: center;
     background-size: cover;
     object-fit: fill;
     filter: brightness(40%);
     border: 1px solid lightgrey;
+}
+.text{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+}
+.btn-light{
+    margin: 10px 0px 0px;
 }
 
 /*
