--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -4,13 +4,13 @@
     --border: 1px solid lightgrey
 }
 .AppHeader{
-    width: 100vw;
+    width: 100%;
     height: 60px;
     /* border: var(--border); */
     padding: 0px;
 }
 .AppHeader > nav{
-    border: var(--border);
+    /* border: var(--border); */
     height: inherit;
     width: 100%;
     padding: 10px 20px;
@@ -26,6 +26,7 @@
     padding: 5px 0px;
     margin: 0;
     font-size: 18px;
+    /* font-weight: lighter; */
 }
 .AppHeader > nav > .optns > span{
     margin-left: 30px;
