--- a/src/RewardEarn/RewardMain/RewardMain.css
+++ b/src/RewardEarn/RewardMain/RewardMain.css
@@ -3,7 +3,22 @@
     --border: 1px dashed lightgrey
 }
 main > section> div{
-    padding: 20px;
+    padding: 15px;
+}
+.heading hr{
+    width: 100px;
+    margin: 0;
+    border: 2px solid #000 !important;
+}
+hr{
+    margin: 30px 100px;
+}
+.card-img-top{
+    background-position: center;
+    background-size: contain;
+}
+.card{
+    cursor: pointer;
 }
 /*
 This is the media screen for mobile devices (up to 767px)
@@ -13,6 +28,11 @@ This is the media screen for mobile devices (up to 767px)
         width: 100%;
         min-height: 300px;
         /* border: var(--border); */
+    }
+    .all_cards{
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(1, fr);
     }
 }
 
@@ -35,8 +55,13 @@ This is the media screen for desktops (1200px and above)
         place-content: center;
     }
     main > section{
-        width: 800px;
+        width: 900px;
         min-height: 300px;
         /* border: var(--border); */
+    }
+    .all_cards{
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(3, 1fr);
     }
 }
