--- a/src/RewardEarn/AddUpPage/addPage.css
+++ b/src/RewardEarn/AddUpPage/addPage.css
@@ -2,12 +2,12 @@
 .addPage{
     width: 100%;
     height: 80vh;
-    background: url('../Assets/Katab\ Design.png');
+    background: url('../Assets/Katab_Design.png');
     background-position: center;
     background-size: cover;
     object-fit: fill;
     filter: brightness(30%);
-    border: 1px solid lightgrey;
+    /* border: 1px solid lightgrey; */
 }
 .text{
     position: absolute;
@@ -18,7 +18,7 @@
 }
 .text hr{
     margin: 0px 50px;
-    border: 2px solid white;
+    /* border: 2px solid white; */
 }
 .btn-light{
     margin: 10px 0px 0px;
