--- a/src/RewardEarn/RewardMain/RewardMain.css
+++ b/src/RewardEarn/RewardMain/RewardMain.css
@@ -60,12 +60,30 @@ This is the media screen for mobile devices (up to 767px)
 /*
 This is the media screen for tablets (768px - 991px)
 */
-@media screen and (min-width:768px) and (max-width: 991px){}
+@media screen and (min-width:768px) and (max-width: 991px){
+    .all_cards{
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .form-section{
+        padding: 50px 30px;
+    }
+}
 
 /*
 This is the media screen for laptops(992px - 1199px)
 */
-@media screen and (min-width:992px) and (max-width: 1199px){}
+@media screen and (min-width:992px) and (max-width: 1199px){
+    .all_cards{
+        display: grid;
+        gap: 20px;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .form-section{
+        padding: 50px 30px;
+    }
+}
 
 /*
 This is the media screen for desktops (1200px and above)
@@ -84,6 +102,8 @@ This is the media screen for desktops (1200px and above)
         display: grid;
         gap: 20px;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+    }
+    .form-section{
+        padding: 50px 30px;
     }
 }
