--- a/src/RewardEarn/AddUpPage/addPage.css
+++ b/src/RewardEarn/AddUpPage/addPage.css
@@ -18,7 +18,7 @@
 }
 .text hr{
     margin: 0px 50px;
-    /* border: 2px solid white; */
+    border: 2px solid white;
 }
 .btn-light{
     margin: 10px 0px 0px;
