--- a/src/RewardEarn/RewardFooter/RewardFooter.css
+++ b/src/RewardEarn/RewardFooter/RewardFooter.css
@@ -62,12 +62,20 @@ This is the media screen for mobile devices (up to 767px)
 /*
 This is the media screen for tablets (768px - 991px)
 */
-@media screen and (min-width:768px) and (max-width: 991px){}
+@media screen and (min-width:768px) and (max-width: 991px){
+    footer > section{
+        width: 100%;
+    }
+}
 
 /*
 This is the media screen for laptops(992px - 1199px)
 */
-@media screen and (min-width:992px) and (max-width: 1199px){}
+@media screen and (min-width:992px) and (max-width: 1199px){
+    footer > section{
+        width: 100%;
+    }
+}
 
 /*
 This is the media screen for desktops (1200px and above)
