--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -28,10 +28,14 @@
     font-size: 18px;
     /* font-weight: lighter; */
 }
-.AppHeader > nav > .optns > span{
+.AppHeader > nav > .optns > .lnk:link{
+    text-decoration: none;
+    color: black;
+}
+.AppHeader > nav > .optns > .lnk{
     margin-left: 30px;
 }
-.AppHeader > nav > .optns > span:last-child{
+.AppHeader > nav > .optns > .lnk:last-child{
     margin-left: 15px;
 }
 .AppHeader > nav > .optns .user{
@@ -40,11 +44,11 @@
     border: 2px solid black;
     border-radius: 50%;
 }
-.AppHeader > nav > .optns > span:hover{
+.AppHeader > nav > .optns > .lnk:hover{
     cursor: pointer;
     border-bottom: 2px solid black;
 }
-.AppHeader > nav > .optns > span:last-child:hover{
+.AppHeader > nav > .optns > .lnk:last-child:hover{
     border-bottom: none;
 }
 
