--- a/src/RewardEarn/AdditionalWebPages/userDashboard.css
+++ b/src/RewardEarn/AdditionalWebPages/userDashboard.css
@@ -65,13 +65,18 @@
     cursor: pointer;
 }
 .balances{
-    height: 130px;
+    /* height: 130px; */
     display: flex;
     justify-content: space-between;
     /* border: var(--border); */
 }
 .balances > div:first-child{
     margin-left: 0px;
+}
+.balances > div:last-child > p{
+    /* border: var(--border); */
+    padding: 5px;
+    border-radius: 10px;
 }
 .balances > div{
     flex-grow: 1;
@@ -80,14 +85,34 @@
 }
 .history{
     flex-grow: 2;
+    padding: 10px 20px;
     /* border: var(--border); */
+}
+.history > table{
+    border: var(--border);
+    border-radius: 10px 10px 0px 0px;
+    overflow: scroll;
+}
+tr{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 15px;
+    text-align: left;
+}
+th{
+    font-weight: bold;
+    /* padding: 0px 10px; */
+    text-align: left;
+}
+td, th{
+    text-align: left;
+    width: 100px;
 }
 
 @media screen and (max-width: 767px){
     .body{
         display: flex;
         flex-direction: column;
-        height: 100%;
     }
     .body > .firstSection{
         width: 100%;
@@ -95,6 +120,8 @@
         /* height: 350px; */
     }
     .body > .secondSection{
+        display: flex;
+        flex-direction: column;
         width: 100%;
         /* height: 1fr; */
     }
@@ -108,5 +135,24 @@
         padding: 10px;
         margin: 0;
         /* margin-left: 10px; */
+    }
+    .history{
+        flex-grow: 2;
+        height: 300px;
+    }
+    .history > table{
+        overflow: scroll;
+        border: var(--border);
+        border-radius: 10px;
+        height: 300px;
+    }
+    tr{
+        display: flex;
+        justify-content: space-between;
+        padding: 10px;
+    }
+    th{
+        font-weight: bold;
+        padding: 0px 10px;
     }
 }
