--- a/src/RewardEarn/RewardHeader/RewardHeader.css
+++ b/src/RewardEarn/RewardHeader/RewardHeader.css
@@ -72,7 +72,7 @@ This is the media screen for mobile devices (up to 767px)
 This is the media screen for tablets (768px - 991px)
 */
 @media screen and (min-width:768px) and (max-width: 991px){
-    .AppHeader > nav > button{
+    .AppHeader > nav > .btn{
         display: none;
     }
 }
@@ -81,7 +81,7 @@ This is the media screen for tablets (768px - 991px)
 This is the media screen for laptops(992px - 1199px)
 */
 @media screen and (min-width:992px) and (max-width: 1199px){
-    .AppHeader > nav > button{
+    .AppHeader > nav > .btn{
         display: none;
     }
 }
@@ -90,7 +90,7 @@ This is the media screen for laptops(992px - 1199px)
 This is the media screen for desktops (1200px and above)
 */
 @media screen and (min-width: 1200px){
-    .AppHeader > nav > button{
+    .AppHeader > nav > .btn{
         display: none;
     }
 }
