--- a/src/RewardEarn/AdditionalWebPages/userDashboard.css
+++ b/src/RewardEarn/AdditionalWebPages/userDashboard.css
@@ -5,6 +5,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
+    margin-bottom: 10px;
 }
 .body > .firstSection{
     width: 20%;
@@ -85,13 +86,14 @@
 }
 .history{
     flex-grow: 2;
-    padding: 10px 20px;
+    padding: 10px 30px;
     /* border: var(--border); */
 }
 .history > table{
     border: var(--border);
     border-radius: 10px 10px 0px 0px;
-    overflow: scroll;
+    overflow: hidden;
+    width: 100%;
 }
 tr{
     display: flex;
@@ -106,7 +108,7 @@ th{
 }
 td, th{
     text-align: left;
-    width: 100px;
+    width: 120px;
 }
 
 @media screen and (max-width: 767px){
