--- a/src/RewardEarn/AddUpPage/addPage.css
+++ b/src/RewardEarn/AddUpPage/addPage.css
@@ -2,11 +2,11 @@
 .addPage{
     width: 100%;
     height: 80vh;
-    background: url('../Assets/Katab_Design.png');
+    background: orange;
     background-position: center;
     background-size: cover;
     object-fit: fill;
-    filter: brightness(30%);
+    filter: brightness(40%);
     /* border: 1px solid lightgrey; */
 }
 .text{
@@ -15,6 +15,16 @@
     left: 50%;
     z-index: 1;
     transform: translate(-50%, -50%);
+    display: grid;
+    place-content: center;
+}
+.text > img{
+    height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
 }
 .text hr{
     margin: 0px 50px;
@@ -27,7 +37,11 @@
 /*
 This is the media screen for mobile devices (up to 767px)
 */
-@media screen and (max-width: 767px){}
+@media screen and (max-width: 767px){
+    .text > img{
+        width: 320px;
+    }
+}
 
 /*
 This is the media screen for tablets (768px - 991px)
