--- a/src/RewardEarn/AddUpPage/addPage.css
+++ b/src/RewardEarn/AddUpPage/addPage.css
@@ -2,11 +2,11 @@
 .addPage{
     width: 100%;
     height: 80vh;
-    background: orange;
+    background: url('../Assets/Assets/city.avif');
     background-position: center;
     background-size: cover;
     object-fit: fill;
-    filter: brightness(40%);
+    filter: brightness(70%);
     /* border: 1px solid lightgrey; */
 }
 .text{
@@ -15,16 +15,7 @@
     left: 50%;
     z-index: 1;
     transform: translate(-50%, -50%);
-    display: grid;
-    place-content: center;
-}
-.text > img{
-    height: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
+    /* border: 1px solid lightgrey; */
 }
 .text hr{
     margin: 0px 50px;
