--- a/src/RewardEarn/SignUpPage/signUp.css
+++ b/src/RewardEarn/SignUpPage/signUp.css
@@ -6,8 +6,11 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    /* height: 400px; */
     border-radius: 10px;
-    border: var(--border);
+    /* border: var(--border); */
+    display: grid;
+    place-content: center;
+    padding: 10px;
 }
