--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,14 @@ body{
     margin: 0;
     padding: 0;
 }
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgb(68, 66, 66);
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Change color on hover */
+}
+  
