--- a/src/RewardEarn/AdditionalWebPages/userDashboard.css
+++ b/src/RewardEarn/AdditionalWebPages/userDashboard.css
@@ -35,7 +35,7 @@
     text-decoration: none;
 }
 .links > .lnk:hover{
-    background-color: orange;
+    background-color: #F5A800;
     color: white;
 }
 /* .links > .lnk:active{
