--- a/src/RewardEarn/AdditionalWebPages/userDashboard.css
+++ b/src/RewardEarn/AdditionalWebPages/userDashboard.css
@@ -175,14 +175,16 @@ td, th{
         /* margin-left: 10px; */
     }
     .history{
+        width: 1005;
         /* flex-grow: 2; */
         /* height: 300px; */
     }
     .history > table{
-        overflow:auto;
+        display: flex;
+        flex-wrap: wrap;
         border: var(--border);
         border-radius: 10px;
-        height: 300px;
+        /* height: 300px; */
     }
     tr{
         display: flex;
